# nix-shells

./: LICENSE  README.md
gibson_v2/: shell.nix
lorri_tensorflow_nixgl_poetry2nix/: pyproject.toml  shell.nix
pybullet/: shell.nix
tensorflow_2.0/: shell.nix
tensorflow_2.1/: shell.nix
