[tool.poetry]
name = "poetry2nixtest"
version = "0.1.0"
description = ""
authors = ["Michael Lingelbach <m.j.lbach@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tf-estimator-nightly = "^2.3.0-alpha.2020050401"
tf-nightly = "^2.2.0-alpha.20200504"
# ray = "^0.8.4"
# pdbpp = "^0.10.2"
# mlflow = "^1.8.0"
# pillow = "^7.1.2"
# matplotlib = "^3.2.1"
# pybullet = "^2.7.5"
# tensorflow_datasets = "^3.1.0"
# scipy = "^1.4.1"
# jupytext = "^1.4.2"
# gitpython = "^3.1.1"
# toml = "^0.10.0"

[tool.poetry.dev-dependencies]
setuptools-scm = "^3.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
